--- a/Proyecto.Iker/HTML/VuelosTop.html
+++ b/Proyecto.Iker/HTML/VuelosTop.html
@@ -13,10 +13,15 @@
                 <img src="..\img\Logotipo-cabecera.png" class="imgLogo">
             </header>
                 <div class="nav">
-                    <label><input type="button" class="buttonNav" value="1"></label>
-                    <label><input type="button" class="buttonNav" value="1"></label>
-                    <label><input type="button" class="buttonNav" value="1"></label>
-                    <label><input type="button" class="buttonNav" value="1"></label>
+                    <a href=""><label><input type="button" class="buttonNav" value="1"></label></a>
+                    <a href=""><label><input type="button" class="buttonNav" value="1"></label></a>
+                    <a href=""><label><input type="button" class="buttonNav" value="1"></label></a>
+                    <a href=""><label><input type="button" class="buttonNav" value="1"></label></a>
+                    <a href=""><label><input type="button" class="buttonNav" value="1"></label></a>
+                    <a href=""><label><input type="button" class="buttonNav" value="1"></label></a>    
+                </div>
+                <div class="subContenido">
+                    <h1>Listado de Vuelos</h1>
                 </div>
                 <div class="contenido">
                     <div class="subContenido">
