--- a/Proyecto/html/listadoActividades.html
+++ b/Proyecto/html/listadoActividades.html
@@ -109,8 +109,18 @@
                                     <a href=""><img src="../recursos/listadoActividades/Grecia-mykonos.jpg" alt="No disponible"></a>
                                     <p>Grecia - mykonos</p>
                                 </div>
-
                             </div>
+                            <div class="orden">
+                            <div class="destinosTOP">
+                                <a href=""><img src="../recursos/listadoActividades/Argentina-CataratasIguazu.jpg" alt="No disponible"></a>
+                                <p>Argentina - Cataratas del Iguazú</p>
+                            </div>
+                            <div class="destinosTOP">
+                                <a href=""><img src="../recursos/listadoActividades/Rio-de-Janeiro-1024x472.jpg" alt=""></a>
+                                <p>Brasil - Rio de Janeiro</p>
+                            </div>
+
+                        </div>
                        
                     </div>
                 </div>
