--- a/Proyecto/html/busquedaVuelos.html
+++ b/Proyecto/html/busquedaVuelos.html
@@ -10,7 +10,7 @@
     <body>
         <main>
             <header>
-                <img src="../recursos/busquedaVuelos/Imagen1.png" class="imgLogo">
+                <img src="../recursos/busquedaVuelos/Imagen1.png"  alt="no disponible" class="imgLogo">
             </header>
                 <div class="nav">
                     <label><a href="../html/index.html"><input type="button" class="buttonNav" value="Inicio"></a></label>
@@ -166,9 +166,9 @@
                         </div>  
 
                         <div id="divfotos">
-                            <img src="../recursos/busquedaVuelos/australia.png" alt="" id="imgS">
-                            <img src="../recursos/busquedaVuelos/abu dhabi.png" alt="" id="imgS">
-                            <img src="../recursos/busquedaVuelos/usa.png" alt="" id="imgS">
+                            <img src="../recursos/busquedaVuelos/australia.png"  alt="no disponible" id="imgS">
+                            <img src="../recursos/busquedaVuelos/abu dhabi.png"  alt="no disponible" id="imgS">
+                            <img src="../recursos/busquedaVuelos/usa.png"  alt="no disponible" id="imgS">
 
 
                         </div>
