Corrección de una letra

--- a/Proyecto/html/listadoActividades.html
+++ b/Proyecto/html/listadoActividades.html
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="destinosTOP">
                                     <a href=""><img src="../recursos/listadoActividades/Grecia-mykonos.jpg" alt="No disponible"></a>
-                                    <p>Grecia - mykonos</p>
+                                    <p>Grecia - Mykonos</p>
                                 </div>
                             </div>
                             <div class="orden">
